syntax = "proto3";

import "directory.proto";

message DirRequest {
  Directory dir = 1;
}